--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+
 @import "tailwindcss";
 @import "tw-animate-css";
 
@@ -112,7 +114,7 @@
   --sidebar-ring: oklch(0.551 0.027 264.364);
 }
 
-button{
+button {
   cursor: pointer;
 }
 
@@ -123,4 +125,8 @@ button{
   body {
     @apply bg-background text-foreground;
   }
+}
+
+body{
+  font-family: "Montserrat", sans-serif;
 }
